--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -27,7 +27,7 @@
 }
 
 .hello {
-    font-size: 1rem;
+    font-size: 40px;
     font-weight: 100;
 }
 
@@ -39,21 +39,63 @@
     font-size: 1rem;
     font-weight: 300;
     letter-spacing: 1px;
-
 }
+
+/* .containerBtn {
+    margin-top: 50px;
+    display: flex;
+    gap: 10px; 
+} */
 
 .contactBtn {
-    text-decoration: none;
-    background: white;
-    color: black;
-    border-radius: 2rem;
-    font-size: 1rem;
-    width: 1rem;
-    font-weight: 600;
-    margin: 1rem 0;
-    padding: 0.75 1.5rem;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+    border: 5em;
+    cursor: pointer;
+    outline: none;
+    font-size: 16px;
+    -webkit-transform: translate(0);
+    transform: translate(0);
+    background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+    padding: 0.7em 2em;
+    border-radius: 65px;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+    -webkit-transition: box-shadow 0.25s;
+    transition: box-shadow 0.25s;
+    color: white;
+    margin: 0 10px;
+    margin-left: 0;
+    
 }
+  
+.contactBtn .text {
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+}
+  
+.contactBtn:after {
+    content: "";
+    border-radius: 18px;
+    position: absolute;
+    margin: 4px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    /* background: #0e0e10; */
+}
+  
+.contactBtn:hover {
+    background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
+    box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+}
+  
+.contactBtn:hover .text {
+    background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
+}
+
+
 
 .btn {
     background: white;
@@ -70,21 +112,38 @@
 
 } */
 
-@media screen and (min-width: 840px) {
-    .bg {
-        right: -10vw;
-    }
-    .introContent {
-        font-size: 5vw;
-    }
-    .hello {
-        font-size: 4.5rem;
-    }
-}
-
 @media screen and (min-width: 480px) {
     .bg {
-        right: -10vw;
+      right: -10vw;
     }
-    
-} 
+    .hello {
+      font-size: 20px;
+    }
+    .introText {
+      font-size: 40px;
+    }
+  }
+  
+  @media screen and (min-width: 840px) {
+    .bg {
+      right: -10vw;
+    }
+    .introContent {
+      font-size: 5vw;
+    }
+    .hello {
+      font-size: 50px;
+    }
+    .introText {
+      font-size: 60px;
+    }
+  }
+  
+  @media screen and (min-width: 1240px) {
+    .hello {
+      font-size: 60px;
+    }
+    .introText {
+      font-size: 80px;
+    }
+  }
