--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,66 +1,77 @@
 .footerContainer {
-    padding-top: 10px;
-    background-color: #121213;
-    color: white;
-    
-  }
-  
-  .footerContent {
-    display: flex;
-    justify-content: space-around;
-    padding-top: 50px;
-    /* gap: 100px; */
-  }
-  
-  .footerLogoRow {
-    display: flex;
-    justify-content: center;
-  }
+  padding-top: 10px;
+  background-color: #121213;
+  color: white;
+}
+
+.footerContent {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 50px;
+  /* gap: 100px; */
+}
+
+.footerLogoRow {
+  display: flex;
+  justify-content: center;
+}
 
 .logo {
-    width: 230px;
-    height: 230px;
+  width: 230px;
+  height: 230px;
 }
-  
-  .footerLinks {
-    list-style: none;
+.li {
+  align-items: center;
+}
+/* .lista {
+  display: flex;
+  flex-direction: column;
+} */
+
+.footerLinks {
+  list-style: none;
+}
+
+.footerLinks li {
+  font-size: 25px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  list-style: none;
+}
+
+.footerLinks li:hover {
+  color: #2d9bf0;
+  transition: all 0.2s ease-in;
+}
+
+.footerSocialMedia {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.socialMediaContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
+}
+
+.socialMediaContainer li a {
+  text-decoration: none;
+  color: white;
+  transition: all 0.2s ease-in;
+}
+
+.socialMediaContainer li a:hover {
+  color: #2d9bf0;
+}
+
+.footerCopyright {
+  text-align: center;
+}
+@media screen and (min-width: px) {
+  .footerContent {
+    /* flex-direction: column; */
   }
-  
-  .footerLinks li {
-    font-size: 25px;
-    margin-bottom: 10px;
-    cursor: pointer;
-    list-style: none;
-  }
-  
-  .footerLinks li:hover {
-    color: #2D9BF0;
-    transition: all 0.20s ease-in;
-  }
-  
-  .footerSocialMedia {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-  }
-  
-  .socialMediaContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    list-style: none;
-  }
-  
-  .socialMediaContainer li a {
-    text-decoration: none;
-    color: white;
-    transition: all 0.20s ease-in;
-  }
-  
-  .socialMediaContainer li a:hover {
-    color: #2D9BF0;
-  }
-  
-  .footerCopyright {
-    text-align: center;
-  }
+}
