--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -1,5 +1,3 @@
-
-
 .container {
   display: flex;
   flex-direction: column;
@@ -12,6 +10,7 @@
 
 .image {
   margin-bottom: 26px;
+  height: 200px;
 }
 
 .title {
